<resources>
    <string name="app_name">TryOn</string>
    <string name="error_snackbar_can_not_find_coordinatorLayout" translatable="false">SnackBar没有引入布局</string>
    <string name="error_load_more_no_adapter_type" translatable="false">没有给 adapter 确定类型</string>
    <string name="base_toast_net_down">网络不可用，请检查网络</string>
    <string name="base_toast_net_worse">网络连接不稳定，请稍后再试</string>
    <string name="base_toast_login_first">请先登录</string>
    <string name="base_snack_function_closed">功能尚未开放，敬请期待！</string>
    <string name="base_snack_no_item">没有一条记录</string>
    <string name="base_snack_no_more_item">没有更多的了</string>
    <string name="base_snack_no_item_been_selected">没有一个项目被选中</string>
    <string name="base_search_progress_title">查询</string>
    <string name="base_search_progress_msg">正在查询，请稍后……</string>
    <string name="base_add_progress_title">添加</string>
    <string name="base_add_progress_msg">正在添加，请稍后……</string>
    <string name="base_delete_progress_title">删除</string>
    <string name="base_delete_progress_msg">正在删除，请稍后……</string>
    <string name="base_refresh_progress_title">更新</string>
    <string name="base_refresh_progress_msg">正在更新数据，请稍后……</string>
    <string name="base_cancel_progress_title">取消</string>
    <string name="base_cancel_progress_msg">正在取消，请稍后……</string>
    <string name="base_dialog_delete_title">删除</string>
    <string name="base_dialog_delete_message">是否要删除所选中的产品</string>
    <string name="base_dialog_operate_title">操作</string>
    <string name="base_dialog_operate_msg">正在操作，请稍后……</string>
    <string name="base_dialog_btn_yes">是</string>
    <string name="base_dialog_btn_no">否</string>
    <string name="base_dialog_btn_confirm">确定</string>
    <string name="base_dialog_btn_sure">确定</string>
    <string name="base_dialog_btn_cancel">取消</string>
    <string name="base_dialog_btn_okay">好的</string>
    <string name="base_item_all">所有</string>
    <string name="base_no_item_selected">不选择</string>
    <string name="scan_progress_title">扫描</string>
    <string name="scan_progress_msg">正在扫描并获取数据，请稍后……</string>
    <string name="login_imgbtn_switch_content_description" translatable="false">用于切换注册和登录的图片</string>
    <string name="login_imgbtn_icon_content_description" translatable="false">其他社交APP的图片</string>
    <string name="login_usn_iet_hint">请输入用户名</string>
    <string name="login_psd_iet_hint">请输入密码</string>
    <string name="login_psd_confirm_iet_hint">请确认密码</string>
    <string name="login_triangle_login_tv">登录</string>
    <string name="login_triangle_register_tv">注册</string>
    <string name="login_login_btn">登\t录</string>
    <string name="login_register_btn">注\t册</string>
    <string name="login_sex_radio_btn_male">男</string>
    <string name="login_sex_radio_btn_female">女</string>
    <string name="login_snack_login_success">登录成功</string>
    <string name="login_snack_register_success">注册成功</string>
    <string name="login_snack_sex_isNull">请选择性别</string>
    <string name="login_snack_usn_psd_isNull">用户名或密码为空</string>
    <string name="login_snack_psd_isDifferent">两次输入的密码不一样</string>
    <string name="login_login_progress_title">登录</string>
    <string name="login_login_progress_msg">登录中，请稍后……</string>
    <string name="login_register_progress_title">注册</string>
    <string name="login_register_progress_msg">注册中，请稍后……</string>
    <string name="user_imgbtn_avatar_content_description" translatable="false">用户头像的图片</string>
    <string name="user_imgbtn_history_content_description" translatable="false">足迹的图片</string>
    <string name="user_imgbtn_coupon_content_description" translatable="false">优惠券的图片</string>
    <string name="user_imgbtn_cart_content_description" translatable="false">购物车的图片</string>
    <string name="user_level_tv">等级：1级</string>
    <string name="user_mark_tv">积分：300</string>
    <string name="user_imgbtn_coupon_tv">优惠券</string>
    <string name="user_imgbtn_history_tv">足迹</string>
    <string name="user_imgbtn_cart_tv">购物车</string>
    <string name="user_item_favourite_tv">我 的 收 藏</string>
    <string name="user_item_order_tv">我 的 订 单</string>
    <string name="user_item_address_tv">收 货 地 址</string>
    <string name="user_item_advice_tv">意 见 建 议</string>
    <string name="user_item_setting_tv">系 统 设 置</string>
    <string name="user_item_logout_tv">退 出 登 录</string>
    <string name="trigger_click_product_get_coupon_tv">点击查看产品即可获得优惠券</string>
    <string name="coupon_tab_coupon_enable">可用</string>
    <string name="coupon_tab_coupon_used">已使用</string>
    <string name="coupon_tab_coupon_unable">不可用</string>
    <string name="product_toolbar_title">产品信息</string>
    <string name="product_add_cart_btn">加入购物车</string>
    <string name="product_buy_btn">立即下单</string>
    <string name="product_list_params_brand">品牌</string>
    <string name="product_list_params_product">款名</string>
    <string name="product_list_params_color">颜色</string>
    <string name="product_list_params_size">尺寸</string>
    <string name="product_list_params_gender">性别</string>
    <string name="product_list_params_type">类别</string>
    <string name="product_list_params_price">价格</string>
    <string name="product_list_params_store">所在门店</string>
    <string name="product_item_already_exists">已有该收藏</string>
    <string name="order_item_order_number">订单号：</string>
    <string name="order_item_whole_price">总金额：</string>
    <string name="order_item_item_count">数量</string>
    <string name="order_item_item_price">金额</string>
    <string name="order_snack_order_success">下单成功</string>
    <string name="cart_menu_item_edit">编辑</string>
    <string name="cart_menu_item_finish">完成</string>
    <string name="cart_whole_price_tv">合计金额：</string>
    <string name="cart_make_order_tv">立即下单</string>
    <string name="cart_rmb_tv">元</string>
    <string name="cart_dialog_order_confirm_title">订单确认</string>
    <string name="cart_dialog_order_confirm_msg">是否要购买所选中的产品？</string>
    <string name="cart_snack_count_can_not_be_zero">数量不可以为0</string>
    <string name="setting_update_tv">版本更新</string>
    <string name="setting_authorize_tv">设置权限</string>
    <string name="setting_refresh_time_tv">设置刷新时间</string>
    <string name="setting_get_refresh_time_tv">查看刷新时间</string>
    <string name="setting_set_dedicated_net_manual_tv">手动输入专用网络</string>
    <string name="setting_set_dedicated_net_tv">设置专用网络</string>
    <string name="setting_check_net_tv">查看当前网络</string>
    <string name="setting_dialog_set_refresh_time_title">设置时间</string>
    <string name="setting_snack_refresh_time_cannot_zero">刷新时间不能为空</string>
    <string name="setting_snack_refresh_time_cannot_less_one">不能设置时间小于1秒</string>
    <string name="setting_snack_set_success">设置成功</string>
    <string name="setting_dialog_check_refresh_time_msg">刷新时间为：</string>
    <string name="setting_dialog_gzd_net">港中大专用网络</string>
    <string name="setting_dialog_bs_net">宝绅专用网络</string>
    <string name="setting_dialog_other_net">其他网络</string>
    <string name="setting_dialog_set_dedicated_net_manually_title">请手动输入IP</string>
    <string name="setting_snack_dedicated_net_cannot_null">IP不能为空</string>
    <string name="setting_dialog_choose_dedicated_net_title">请选择专用网络</string>
    <string name="setting_dialog_check_net_msg">当前网络为：</string>
    <string name="order_confirm_coupon_select_btn">选择可用的优惠券</string>
    <string name="order_confirm_pay_btn">立即支付</string>
    <string name="order_success_check_order_btn">查看订单</string>
    <string name="update_version_tv">版本号：</string>
    <string name="update_check_tv">检查更新</string>
    <string name="main_snack_switch_normal_net">切换至普通网络</string>
    <string name="main_snack_switch_dedicated_net">切换至专用网络</string>
    <string name="product_details_frag_title">产品详细</string>
    <string name="product_pattern_frag_title">款式选择</string>
    <string name="pattern_price">价格：</string>
    <string name="pattern_stock">库存：</string>
    <string name="pattern_price_init_tv">价格：0.00</string>
    <string name="pattern_stock_init_tv">库存：0件</string>
    <string name="pattern_toast_size_btn">请先选择颜色</string>
    <string name="pattern_snack_select_color_size">请选择颜色或尺码</string>
    <string name="pattern_snack_no_stock">该款产品暂无库存，请选择其他产品</string>
    <string name="product_action_already_get_coupon">您已经领取过该优惠券了</string>
    <string name="product_action_congratulation_start">恭喜您获得-</string>
    <string name="product_action_congratulation_end">-一张！</string>
    <string name="coupon_list_params_name">券名</string>
    <string name="coupon_list_params_discount">折扣率</string>
    <string name="coupon_list_params_store">适用门店</string>
    <string name="coupon_list_params_brand">适用品牌</string>
    <string name="coupon_list_params_product_name">适用款名</string>
    <string name="coupon_list_params_time">使用时间</string>
    <string name="coupon_list_params_number">券号</string>
    <string name="coupon_list_params_type">类别</string>
    <string name="coupon_list_params_content">描述</string>
    <string name="coupon_list_params_status">状态</string>
    <string name="coupon_discount">折</string>
    <string name="coupon_dialog_coupon_title">优惠券</string>
    <string name="update_toolbar_title">版本更新</string>
    <string name="update_dialog_title">版本更新</string>
    <string name="update_dialog_msg">检测到新版本，请问是否更新？</string>
    <string name="update_snack_is_Latest_version">当前已经是最新版本</string>
    <string name="update_downloading_latest_version">正在下载更新</string>
    <string name="user_dialog_log_out_title">退出登录</string>
    <string name="user_dialog_log_out_msg">确定退出登录吗</string>
    <string name="order_confirm_price_discount_before">优惠前总金额：</string>
    <string name="order_confirm_price_discount_after">优惠后总金额：</string>
    <string name="order_confirm_coupon">优惠券：</string>
    <string name="order_confirm_coupon_no_selected">优惠券：不选择</string>
    <string name="auth_toolbar_title">权限管理</string>
    <string name="auth_config_tv">语言权限</string>
    <string name="auth_camera_tv">相机权限</string>
    <string name="auth_location_tv">地图权限</string>
    <string name="auth_read_state_tv">推送权限</string>
    <string name="auth_storage_tv">更新权限</string>
    <string name="auth_warm_tips_tv">为了您更好的体验，建议您开启所有权限。</string>
    <string name="auth_toast_permission_camera_authorized">请打开权限，否则无法正常扫码</string>
    <string name="auth_toast_permission_update_authorized">请打开权限，否则无法下载新版本</string>
    <string name="auth_dialog_title">权限设置</string>
    <string name="auth_dialog_map_permission_msg" translatable="false">由于您未授予地图权限，因此无法显示地图功能，请点击右上角进入“个人信息”—>“授权”中进行设置</string>
    <string name="auth_dialog_language_permission_msg" translatable="false">由于您未授予语言权限，因此无法使用切换语言功能，请点击“授权”进行设置</string>
    <string name="shoe_pattern_stock_only">只看有货</string>
    <string name="shoe_pattern_price_stock_divider">库存 - 价格</string>
    <string name="empty_page_no_any_data_record">尚无任何数据或记录</string>
    <string name="net_down_press_btn_refresh">请点击刷新按钮进行刷新</string>
    <string name="edit_refresh_set_refresh_time_et_hint">请输入刷新时间</string>
    <string name="edit_setting_set_dedicated_net_et_hint">请输入专用IP及端口号,如192.168.1.1:8080</string>
    <string name="filter_call_filter_tv">筛选</string>
    <string name="filter_nav_reset_tv">重置</string>
    <string name="pick_pattern_pick_color_tv">颜色选择</string>
    <string name="pick_pattern_pick_size_tv">尺码选择</string>
    <string name="search_search_tv">搜索</string>
    <string name="load_more_load_more_tv">正在加载更多……</string>
</resources>