<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filter_nav"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:layout_gravity="end">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical">

        <TextView
            style="@style/result_filter_spinner_title_style"
            android:text="@string/product_list_params_brand" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/filter_brand_spn"
            style="@style/result_filter_spinner_style" />

        <include layout="@layout/divider_horizontal_item" />


        <TextView
            style="@style/result_filter_spinner_title_style"
            android:layout_marginTop="@dimen/item_opf_divider"
            android:text="@string/product_list_params_color" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/filter_color_spn"
            style="@style/result_filter_spinner_style" />

        <include layout="@layout/divider_horizontal_item" />

        <TextView
            style="@style/result_filter_spinner_title_style"
            android:layout_marginTop="@dimen/item_opf_divider"
            android:text="@string/product_list_params_size" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/filter_size_spn"
            style="@style/result_filter_spinner_style" />

        <include layout="@layout/divider_horizontal_item" />

    </LinearLayout>

    <Button
        android:id="@+id/filter_reset_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/dw_color_assist_square_entire_btn"
        android:text="@string/filter_nav_reset_tv"
        android:textColor="@android:color/white" />

</android.support.design.widget.NavigationView>